Reduced unit search radius and fixed weird movemnt bug

--- a/Tower Defense/Assembly-CSharp.csproj
+++ b/Tower Defense/Assembly-CSharp.csproj
@@ -67,11 +67,12 @@
     <Compile Include="Assets\Scripts\ChargedAttackUnit.cs" />
     <Compile Include="Assets\Scripts\CombatHandler.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\HealthBar.cs" />
     <Compile Include="Assets\Scripts\MinHeap.cs" />
-    <Compile Include="Assets\Scripts\PlayerHQ.cs" />
     <Compile Include="Assets\Scripts\Resources\ResourceNode.cs" />
-    <Compile Include="Assets\Scripts\Unit.cs" />
+    <Compile Include="Assets\Scripts\UnitScripts\HealthBar.cs" />
+    <Compile Include="Assets\Scripts\UnitScripts\PlayerHQ.cs" />
+    <Compile Include="Assets\Scripts\UnitScripts\ResourceCollector.cs" />
+    <Compile Include="Assets\Scripts\UnitScripts\Unit.cs" />
     <Compile Include="Assets\Scripts\Utilities\KdTree\GameObjectMath.cs" />
     <Compile Include="Assets\Scripts\Utilities\KdTree\KdTreeLib\HyperRect.cs" />
     <Compile Include="Assets\Scripts\Utilities\KdTree\KdTreeLib\IKdTree.cs" />
